--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
             </p>
             
             <div class="cv-container">
-                <a href="https://docs.google.com/uc?export=download&id=16zLH5pBjInKpl4sbS02nOrS80dTS4BYI" 
-                   class="btn-cv" 
-                   data-es="Descargar CV" 
-                   data-en="Download CV">
-                    <i class="bi bi-file-earmark-arrow-down"></i> Download CV
+                <a href="https://docs.google.com/uc?export=download&id=1koQxHSq7zK8cl1-Mm3eHBcr4htCQXHCJ" 
+                class="btn-cv" 
+                data-es="Descargar CV" 
+                data-en="Download CV">
+                    <i class="bi bi-file-earmark-arrow-down"></i> <span data-es="Descargar CV" data-en="Download CV">Download CV</span>
                 </a>
             </div>
         </div>
@@ -62,20 +62,13 @@
 </nav>
 
 <section id="sobre-mi" class="scroll-fade">
-    <h2 data-es="Sobre mí" data-en="About Me">About Me</h2>
-    <p data-es="Soy estudiante de Ingeniería de Sistemas en la Universidad Santiago de Cali, apasionado por la tecnología,
-        el desarrollo de software y el aprendizaje continuo.
-        Me interesa especialmente el desarrollo web, la automatización de procesos y
-        el uso de la inteligencia artificial para crear soluciones prácticas.
-        Disfruto trabajar en proyectos que me reten y fortalezcan mis habilidades técnicas y analíticas."
-       data-en="I am Hilan Eduardo Alegria Yate, a Systems Engineering student at Universidad Santiago de Cali, passionate about technology and continuous learning...">
-       I am Hilan Eduardo Alegria Yate, a Systems Engineering student...
-    </p>
-    <h2 data-es="Estudios" data-en="Education">Education</h2>
-    <p data-es="Bachillerato: 2016 - 2021. Universidad: Universidad Santiago de Cali - 2022 - Actualidad"
-       data-en="High School: 2016 - 2021. University: Universidad Santiago de Cali - 2022 - Present">
-       High School: 2016 - 2021. University: Universidad Santiago de Cali - 2022 - Present
-    </p>
+    <h2 data-es="Sobre mí" data-en="About Me">Sobre mí</h2>
+    <div class="sobre-mi-contenido">
+        <p data-es="Soy estudiante de Ingeniería de Sistemas en la Universidad Santiago de Cali, apasionado por la tecnología, el desarrollo de software y el aprendizaje continuo. Tengo un especial interés en el desarrollo web, la automatización de procesos y la aplicación de la inteligencia artificial para crear soluciones prácticas y eficientes. Disfruto trabajar en proyectos que representen un reto y me permitan fortalecer mis habilidades técnicas y analíticas, así como aportar valor mediante el uso estratégico de la tecnología."
+           data-en="I am a Systems Engineering student at Universidad Santiago de Cali, passionate about technology, software development, and continuous learning. I have a special interest in web development, process automation, and the application of artificial intelligence to create practical and efficient solutions. I enjoy working on projects that represent a challenge and allow me to strengthen my technical and analytical skills, as well as provide value through the strategic use of technology.">
+           Soy estudiante de Ingeniería de Sistemas en la Universidad Santiago de Cali, apasionado por la tecnología, el desarrollo de software y el aprendizaje continuo. Tengo un especial interés en el desarrollo web, la automatización de procesos y la aplicación de la inteligencia artificial para crear soluciones prácticas y eficientes. Disfruto trabajar en proyectos que representen un reto y me permitan fortalecer mis habilidades técnicas y analíticas, así como aportar valor mediante el uso estratégico de la tecnología.
+        </p>
+    </div>
 </section>
 
 <section id="proyectos" class="scroll-fade">
@@ -92,7 +85,7 @@
         </div>
         <div class="proyecto">
             <img src="imagenes/proyecto 6.png" alt="Fundacion Terra Angels" loading="lazy">
-            <h3 data-es="Pagina web - Fundacion Terra Angels" data-en="Terra Angels">Terra Angels</h3>
+            <h3 data-es="Pagina web - Fundacion Terra Angels" data-en="Terra Angels Foundation">Terra Angels</h3>
             <p data-es="Pagina web para presentación de la fundación Terra Angels."
                data-en="Website for presenting the Terra Angels foundation.">
                Website for presenting the Terra Angels foundation.
