--- a/index.html
+++ b/index.html
@@ -140,14 +140,94 @@
     <div class="section-card">
         <h2 data-es="Habilidades" data-en="Skills">Skills</h2>
         <ul class="habilidades-list">
-            <li><i class="fab fa-python"></i> Python</li>
-            <li><i class="fab fa-html5"></i> HTML5</li>
-            <li><i class="fab fa-css3-alt"></i> CSS3</li>
-            <li><i class="fab fa-js"></i> JavaScript</li>
-            <li><i class="bi bi-file-excel"></i> Excel</li>
-            <li><i class="fab fa-github"></i> GitHub</li>
-            <li><i class="bi bi-code-slash"></i> VS Code</li>
-            <li><i class="bi bi-router"></i> Cisco</li>
+            <li onclick="toggleSkill(this)">
+                <div class="skill-header">
+                    <i class="fab fa-python"></i> <span>Python</span>
+                    <i class="bi bi-chevron-down arrow-icon"></i>
+                </div>
+                <p class="skill-desc" 
+                   data-es="Desarrollo de scripts, automatización de tareas y lógica de programación." 
+                   data-en="Script development, task automation, and programming logic.">
+                   Desarrollo de scripts, automatización de tareas y lógica de programación.
+                </p>
+            </li>
+            <li onclick="toggleSkill(this)">
+                <div class="skill-header">
+                    <i class="fab fa-html5"></i> <span>HTML5</span>
+                    <i class="bi bi-chevron-down arrow-icon"></i>
+                </div>
+                <p class="skill-desc" 
+                   data-es="Creación de estructuras semánticas para sitios web." 
+                   data-en="Creation of semantic structures for websites.">
+                   Creación de estructuras semánticas para sitios web.
+                </p>
+            </li>
+            <li onclick="toggleSkill(this)">
+                <div class="skill-header">
+                    <i class="fab fa-css3-alt"></i> <span>CSS3</span>
+                    <i class="bi bi-chevron-down arrow-icon"></i>
+                </div>
+                <p class="skill-desc" 
+                   data-es="Diseño responsivo y estilizado de interfaces web." 
+                   data-en="Responsive design and styling of web interfaces.">
+                   Diseño responsivo y estilizado de interfaces web.
+                </p>
+            </li>
+            <li onclick="toggleSkill(this)">
+                <div class="skill-header">
+                    <i class="fab fa-js"></i> <span>JavaScript</span>
+                    <i class="bi bi-chevron-down arrow-icon"></i>
+                </div>
+                <p class="skill-desc" 
+                   data-es="Programación del lado del cliente, interactividad y manejo del DOM." 
+                   data-en="Client-side programming, interactivity, and DOM manipulation.">
+                   Programación del lado del cliente, interactividad y manejo del DOM.
+                </p>
+            </li>
+            <li onclick="toggleSkill(this)">
+                <div class="skill-header">
+                    <i class="bi bi-file-excel"></i> <span>Excel</span>
+                    <i class="bi bi-chevron-down arrow-icon"></i>
+                </div>
+                <p class="skill-desc" 
+                   data-es="Manejo de hojas de cálculo, fórmulas y organización de datos." 
+                   data-en="Spreadsheet management, formulas, and data organization.">
+                   Manejo de hojas de cálculo, fórmulas y organización de datos.
+                </p>
+            </li>
+            <li onclick="toggleSkill(this)">
+                <div class="skill-header">
+                    <i class="fab fa-github"></i> <span>GitHub</span>
+                    <i class="bi bi-chevron-down arrow-icon"></i>
+                </div>
+                <p class="skill-desc" 
+                   data-es="Control de versiones y trabajo colaborativo en proyectos." 
+                   data-en="Version control and collaborative project work.">
+                   Control de versiones y trabajo colaborativo en proyectos.
+                </p>
+            </li>
+            <li onclick="toggleSkill(this)">
+                <div class="skill-header">
+                    <i class="bi bi-code-slash"></i> <span>VS Code</span>
+                    <i class="bi bi-chevron-down arrow-icon"></i>
+                </div>
+                <p class="skill-desc" 
+                   data-es="Entorno de desarrollo para programación y depuración de código." 
+                   data-en="Development environment for programming and code debugging.">
+                   Entorno de desarrollo para programación y depuración de código.
+                </p>
+            </li>
+            <li onclick="toggleSkill(this)">
+                <div class="skill-header">
+                    <i class="bi bi-router"></i> <span>Cisco</span>
+                    <i class="bi bi-chevron-down arrow-icon"></i>
+                </div>
+                <p class="skill-desc" 
+                   data-es="Conocimientos básicos de redes, configuración y conceptos de conectividad." 
+                   data-en="Basic knowledge of networking, configuration, and connectivity concepts.">
+                   Conocimientos básicos de redes, configuración y conceptos de conectividad.
+                </p>
+            </li>
         </ul>
     </div>
 </section>
