--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@
                    Website design focused on showcasing local products.
                 </p>
                 <a href="https://github.com/HilanAlegria/PanaderiaSC" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://hilanalegria.github.io/PanaderiaSC/" target="_blank" title="Visitar Sitio Web"><i class="fas fa-external-link-alt"></i></a>
             </div>
             <div class="proyecto">
                 <img src="imagenes/proyecto 6.png" alt="Fundacion Terra Angels" loading="lazy">
@@ -95,6 +96,7 @@
                    Website for presenting the Terra Angels foundation.
                 </p>
                 <a href="https://hilanalegria.github.io/Terra_Angels_Web/index.html#inicio" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://hilanalegria.github.io/Terra_Angels_Web/index.html#inicio" target="_blank" title="Visitar Sitio Web"><i class="fas fa-external-link-alt"></i></a>
             </div>
             <div class="proyecto">
                 <img src="imagenes/Proyecto 3.png" alt="Automation" loading="lazy">
@@ -131,6 +133,17 @@
                    Inteligencia Artificial.
                 </p>
                 <a href="https://github.com/HilanAlegria/Proyecto-de-Inteligencia-Artificial" aria-label="GitHub"><i class="fab fa-github"></i></a>
+            </div>
+            <div class="proyecto">
+                <img src="imagenes/Proyecto 8.png" alt="App de Celular" loading="lazy">
+                <h3 data-es="Aplicación Móvil Happy Notes" data-en="Mobile Application Happy Notes">Mobile Application</h3>
+                <p data-es="Desarrollo de una aplicación móvil usando el framework de expo go, para crear notas."
+                   data-en="Development of a mobile application for task and event management.">
+                   Mobile Application.</p>
+                <a href="https://github.com/HilanAlegria/mis-notas-app" aria-label="GitHub"><i class="fab fa-github"></i></a>
+                <a href="https://wf-artifacts.eascdn.net/builds/store-rg/e3198909-724c-4de9-b82e-1f88ad4d4d0e/a2b98092-0098-4c69-b43a-c9a8d51a0820/019c0fe3-b60e-76bc-9bd4-7de4d7dc587e/application-a2b98092-0098-4c69-b43a-c9a8d51a0820.apk?X-Amz-Algorithm=AWS4-HMAC-SHA256&X-Amz-Content-Sha256=UNSIGNED-PAYLOAD&X-Amz-Credential=75d871a1a44e598975dd84fa2341c9b0%2F20260130%2Fus-east-1%2Fs3%2Faws4_request&X-Amz-Date=20260130T171400Z&X-Amz-Expires=900&X-Amz-Signature=e9bc9079529a1df288cca34a82ae79f888bb173b9dfa9c99836ca2e0ea00401f&X-Amz-SignedHeaders=host&x-amz-checksum-mode=ENABLED&x-id=GetObject"
+                    download="mis-notas-app.apk" title="Descargar APK">
+                <i class="fas fa-download"></i></a>
             </div>
         </div>
     </div>
